--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,7 +1,6 @@
-<p>안녕하세요 <%= @resource.email %>!</p>
+<p>안녕하세요 <%= @resource.email %>님! 경희대 강의평가 서비스 Khulgang입니다. </p>
 
-
-<p>비밀번호 변경 시도가 있었습니다. 본인이 맞으시면 아래 링크를 클릭해주세요.</p>
+<p>최근 비밀번호 변경 시도가 있었습니다. 본인이 맞으시면 아래 링크를 클릭해주세요.</p>
 <p><%= link_to '비밀번호 변경하기', edit_password_url(@resource, reset_password_token: @token) %></p>
 
 
