--- a/app/views/hoegi105/admin.erb
+++ b/app/views/hoegi105/admin.erb
@@ -16,9 +16,8 @@
     <div class="admin-row">
         <label>세부과정</label>
             <input type="radio" name="typeofhospi" value="" required="required">해당사항 없음
-            <input type="radio" name="typeofhospi" value="공통경영" required="required">공통경영
-            <input type="radio" name="typeofhospi" value="학과경영" required="required">학과경영
-            <input type="radio" name="typeofhospi" value="학과선택" required="required">학과선택
+            <input type="radio" name="typeofhospi" value="경영공통" required="required">경영공통
+            <input type="radio" name="typeofhospi" value="경영학과선택" required="required">경영학과선택
     </div>
     <div class="admin-row">
         <label>학과</label>
@@ -49,7 +48,7 @@
             <td><%= user.last_sign_in_at %></td>
             <td><%= user.created_at %></td>
             <td><%= user.updated_at %></td>
-            <td><%= user.user_major %></td>
+            <td><%= Major.where(:major_code => user.user_major) %></td>
             <td><%= user.student_num %></td>
         </tr>
     <% end %>
