--- a/app/views/hoegi105/admin_update.erb
+++ b/app/views/hoegi105/admin_update.erb
@@ -16,9 +16,8 @@
     <div class="admin-row">
         <label>세부과정</label>
             <input type="radio" name="typeofhospi" value="" required="required">해당사항 없음
-            <input type="radio" name="typeofhospi" value="공통경영" required="required">공통경영
-            <input type="radio" name="typeofhospi" value="학과경영" required="required">학과경영
-            <input type="radio" name="typeofhospi" value="학과선택" required="required">학과선택
+            <input type="radio" name="typeofhospi" value="경영공통" required="required">경영공통
+            <input type="radio" name="typeofhospi" value="경영학과선택" required="required">경영학과선택
     </div>
     <div class="admin-row">
         <label>학과</label>
