edit hoegi105_controller.rb, function like

--- a/app/views/hoegi105/admin.erb
+++ b/app/views/hoegi105/admin.erb
@@ -68,7 +68,7 @@
             <td><%= lecture.typeof_lecture %></td>
             <td><%= lecture.created_at %></td>
             <td><%= lecture.updated_at %></td>
-            <td><a href="/hoegi105/admin_update/<%= lecture.id %>">수정</a></td>
+            <!--<td><a href="/hoegi105/admin_update/<%= lecture.id %>">수정</a></td>-->
             <td><a href="/hoegi105/admin_delete/<%= lecture.id %>">삭제</a></td>
         </tr>
     <% end %>
