--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,40 +30,47 @@
  
 
 /* 
-color pink #FF479C 
+color yellow #ffa401
+color pink #ff479b
 color blue #00B9FF
+color facebook 000a7f
+color twitter 04b8ff
 
 */
 @import url(https://fonts.googleapis.com/earlyaccess/cwtexhei.css);
 @import url(https://fonts.googleapis.com/earlyaccess/jejugothic.css);
 
-
+#RevNull{
+    padding: 5vw;
+    padding-top:10vw;
+    
+}
 
 .label-warning{
     background-color:#FFBE00;
 }
 .btndone{
-    background-color:#ff479c !important;
-    border-color:#ff479c !important;
+    background-color:#000a7e !important;
+    border-color:#000a7e !important;
     color:white;
 }
 
 .btndone:hover{
-    background-color:#ff479c !important;
-    border-color:#ff479c !important;
+    background-color:#000a7e !important;
+    border-color:#000a7e !important;
     color:white !important;
 }
 
 .btnradone{
-    background-color:#FF479C !important;
+    background-color:#000a7e !important;
     color:white !important;
-        border-color:#FF479C !important;
+        border-color:#000a7e !important;
 }
 
 .btnradone:active{
     background-color:white !important;
-    color:#FF479C !important;
-        border-color:#FF479C !important;
+    color:#000a7e !important;
+        border-color:#000a7e !important;
 }
 
 
@@ -74,7 +81,7 @@ color blue #00B9FF
 .label2 {
     font-size:3.5vw !important;
     margin-left:2vw;
-    background-color: #ff479c!important;
+    background-color: #000a7e!important;
 }
 
 
@@ -83,7 +90,7 @@ color blue #00B9FF
     margin-top:0.5vw;
     margin-bottom:2vw;
     font-size:3vw;
-    color:#FF479C;
+    color:#000a7e;
 }
 
 .popcount3{
@@ -97,7 +104,7 @@ color blue #00B9FF
     margin-left:1vw;
     margin-top:1vw;
     font-size:3vw;
-    color:#ff479c;
+    color:#000a7e;
 }
 
 
@@ -105,8 +112,8 @@ color blue #00B9FF
     font-size:3.5vw !important;
     margin-left:2vw;
     background-color:white!important;
-    color:#ff479c !important;
-    border-color:#ff479C !important;
+    color:#000a7e !important;
+    border-color:#000a7e !important;
     border-style:solid;
     border-width:1px;
 }
@@ -122,12 +129,12 @@ color blue #00B9FF
     margin-top:1vw !important;
     font-size:100% !important;
     background-color:white!important;
-    color:#ff479c !important;
+    color:#000a7e !important;
 }
 
 
 .reviewwriting{
-    color:#ff479c;
+    color:#000a7e;
     margin-bottom:0px;
 }
 
@@ -141,7 +148,7 @@ color blue #00B9FF
     margin-top:1.8vw !important;
     font-size:100% !important;
     background-color:white!important;
-    color:#ff479c !important;
+    color:#000a7e !important;
 }
 
  .takespans{
@@ -171,14 +178,14 @@ color blue #00B9FF
     padding-top:2.5vw;
     height:10vw;
     background-color:#ffffff;
-    color:#FF479C;
+    color:#000a7e;
 }
 #myRevTitle:active {
     text-decoration: none !important;
     padding-top:2.5vw;
     height:10vw;
     background-color:#ffffff;
-    color:#FF479C;
+    color:#000a7e;
 }
 
 #myRevTitle:hover {
@@ -187,7 +194,7 @@ color blue #00B9FF
     padding-top:2.5vw;
     height:10vw;
     background-color:#ffffff;
-    color:#FF479C;
+    color:#000a7e;
 }
 
 .label-tag-big {
@@ -229,13 +236,13 @@ color blue #00B9FF
     background-color:#00B9FF!important;
 }
 .label-g1{
-    background-color: #ff479c!important;
+    background-color: #000a7e!important;
     color:white !important;
 }
 
 .label-11{
     background-color:white!important;
-    color:#ff479c!important;;
+    color:#000a7e!important;;
 }
 .label-12
 {
@@ -258,7 +265,7 @@ color blue #00B9FF
 .btn2.active, .btn2:active {
     background-image: none;
     outline: 0;
-   background-color: #ff479c!important;
+   background-color: #000a7e!important;
    color:white!important;
 
 }
@@ -291,10 +298,10 @@ color:white!important;
 
 
 .label-default{
-    background-color:#FF479C;
+    background-color:#000a7e;
 }
 .label-danger{
-    background-color:#FF479C;
+    background-color:#000a7e;
 }
 .rating-loading {
     width: 45vw;
@@ -314,7 +321,7 @@ color:white!important;
 }
 #selectform2{
     height:81vh;
-    background-color:#FF479C;
+    background-color:#000a7e;
     font-family: "Jeju Gothic", sans-serif !important;
 }
 .rating-fa {
@@ -378,7 +385,7 @@ color:white!important;
     top: 0;
     white-space: nowrap;
     overflow: hidden;
-    color: #ffc103; /*찬별색깔*/
+    color: #ffa401; /*찬별색깔*/
     transition: all 0.25s ease-out;
     -o-transition: all 0.25s ease-out;
     -moz-transition: all 0.25s ease-out;
@@ -567,13 +574,13 @@ color:white!important;
     margin:0px !important;
     border-style:none !important;
     border-bottom-style:solid !important;
-    border-color:#ff479C;
+    border-color:#000a7e;
 
     border-bottom-width:1px !important;
     
 }
 #cla-panel:active{
-    background-color:#ff479c !important;
+    background-color:#000a7e !important;
 }
 
 #cla-panel:active .text-title{
@@ -601,12 +608,12 @@ color:white!important;
 
 #cla-panel:active .label2{
     background-color:white !important;
-    color:#ff479c;
+    color:#000a7e;
 }
 
 #cla-panel:active .label3{
     background-color:white !important;
-    color:#ff479c;
+    color:#000a7e;
 }
 
 
@@ -627,7 +634,7 @@ color:white!important;
     bottom:0;
     width:100vw;
     height:0.0vw;
-    background-color:#ff479C;
+    background-color:#000a7e;
 }
 
 .cbp-spmenu-top{
@@ -768,12 +775,12 @@ body {
 
     }
     #button1:active {
-    background-color:#ff479c !important;
+    background-color:#000a7e !important;
     border-style:none!important;
     color:white;
     }
         #button1:hover {
-    background-color:#ff479c !important;
+    background-color:#000a7e !important;
     border-style:none!important;
     color:white;
     }
@@ -1121,7 +1128,7 @@ a{
     font-size:5vw;
 }
 .glyphicon{
-    color:#ff479c;
+    color:#000a7e;
     font-size:5vw;
 }
 #com-panel2{
@@ -1145,7 +1152,7 @@ a{
     background-color: rgba(255, 255, 255, 1)!important;
     /* border-color: #ccc; */
     border-style:solid;
-    border-color:#ff479c;
+    border-color:#000a7e;
     border-width:0px 0px 1px 0px;
     margin: 0vw 0vw 0vw 0vw !important;
     padding:1.8vw 1.8vw 1.8vw 1.8vw;
@@ -1345,7 +1352,7 @@ height:2vw;
     width:96vw !important;
     text-decoration:none!important;
     font-size:5vw !important;
-    color:#ff479c !important;
+    color:#000a7e !important;
     height:15vw;
     border-left:0 !important;
 }
@@ -1354,14 +1361,14 @@ height:2vw;
     width:96vw !important;
     text-decoration:none !important;
     font-size:5vw !important;
-    background-color:#ff479c !important;
+    background-color:#000a7e !important;
     color:white !important;
 }
 .rmenu:active{
     width:96vw !important;
     text-decoration:none !important;
     font-size:5vw !important;
-    background-color:#ff479c !important;
+    background-color:#000a7e !important;
     color:white !important;
 }
 
@@ -1467,7 +1474,7 @@ height:2vw;
     border-style:solid;
     border-width:1px 0px 1px 0px;
     border-radius:0px;
-    border-color:#ff479c;
+    border-color:#000a7e;
     padding:2.2vw !important;
 }
 
@@ -1477,7 +1484,7 @@ height:2vw;
     border-style:solid;
     border-width:1px 0px 1px 0px;
     border-radius:0px;
-    border-color:#ff479c;
+    border-color:#000a7e;
     padding:2.2vw !important;
 }
 
@@ -1487,11 +1494,11 @@ height:2vw;
     border-style:solid;
     border-width:1px 0px 1px 0px;
     border-radius:0px;
-    border-color:#ff479c;
+    border-color:#000a7e;
 }
 
 #button_review1:active{
-   background-color:#ff479c;
+   background-color:#000a7e;
 }
 
 #button_review1:active .glyphicon-pencil{
@@ -1499,7 +1506,7 @@ height:2vw;
 }
 
 #button_review:active{
-   background-color:#ff479c;
+   background-color:#000a7e;
 }
 
 #button_review:active .glyphicon-pencil{
@@ -1507,7 +1514,7 @@ height:2vw;
 }
 
 #button_rating:active{
-   background-color:#ff479c;
+   background-color:#000a7e;
 }
 
 #button_rating:active .glyphicon-star{
@@ -1519,7 +1526,7 @@ height:2vw;
 }
 
 #button_rating2:active .label6{
-    background-color:#ff479c!important;
+    background-color:#000a7e!important;
     color:white !important;
 }
 #button_review1{
@@ -1528,7 +1535,7 @@ height:2vw;
     border-style:solid;
     border-width:1px 0px 1px 0px;
     border-radius:0px;
-    border-color:#ff479c;
+    border-color:#000a7e;
 }
 
 .modal-content{
@@ -1551,8 +1558,9 @@ height:2vw;
     margin-bottom:0!important;
     border-bottom:0;
     height:32.4vw;
-    background-color:transparent;
-    background-image: url("/assets/bg_redblur_navbar.jpg") !important;
+    background-color: #000a7e;
+  /*  background-color:transparent;
+    background-image: url("/assets/bg_redblur_navbar.jpg") !important; */
     background-size:100% 100%;
     z-index:0;
 
@@ -1633,7 +1641,7 @@ height:2vw;
 }
 
 #homeButton:hover #home_icon{
-     color:#ff479c;
+     color:#000a7e;
 }
 
 #homeButton:hover{
@@ -1649,7 +1657,7 @@ height:2vw;
     
 }
 .textbutton{
-    color:#ff479c !important;
+    color:#000a7e !important;
     background-color:transparent !important;
     border-style:none !important;
     
@@ -1679,7 +1687,7 @@ height:2vw;
 }
 
 #menuButton:hover #menu_icon{
-    color:#ff479c;
+    color:#000a7e;
 }
 
 #menu_icon{
@@ -1704,19 +1712,19 @@ height:2vw;
     height:14.4vw;
     border-style:none;
     background-color:white;
-    color:#ff479c;
-    border-color:#ff479c;
+    color:#000a7e;
+    border-color:#000a7e;
     font-weight:500;
 }
 
 #selectyourdep:active{
-    background-color:#ff479c;
+    background-color:#000a7e;
     color:white;
     border-color:white;
 }
 
 #selectyourdep2:active{
-    background-color:#ff479c;
+    background-color:#000a7e;
     color:white;
     border-color:white;
 }
@@ -1726,13 +1734,13 @@ height:2vw;
     height:14.4vw;
     border-style:none;
     background-color:white;
-    color:#ff479c;
-    border-color:#ff479c;
+    color:#000a7e;
+    border-color:#000a7e;
     font-size:5.4vw;
     font-weight:500;
 }
 #comment_icon{
-    color:#ff479C ;
+    color:#000a7e ;
     font-weight:500;
 }
 
@@ -1753,8 +1761,8 @@ height:2vw;
     height:14.4vw;
     font-size:5.4vw;
     padding:1.8vw;
-    color:#ff479C;
-    border-color:#ff479c;
+    color:#000a7e;
+    border-color:#000a7e;
     background-image:none !important;
 }
 .dropbutton{
@@ -1764,7 +1772,7 @@ height:2vw;
     border-style:none;
     font-size:5.4vw;
     padding:1.8vw;
-    color:#ff479C!important;
+    color:#000a7e!important;
     background-image:none !important;
 }
 
@@ -1775,14 +1783,14 @@ height:2vw;
 }
 .dropbutton:active {
     color:white !important;
-    background-color:#ff479C!important;
+    background-color:#000a7e!important;
     border-style:none !important;
     background-image:none !important;
 }
 
 .dropbutton2:hover {
     color:white !important;
-    background-color:#ff479C!important;
+    background-color:#000a7e!important;
     border-style:none !important;
     background-image:none !important;
 }
@@ -1790,14 +1798,14 @@ height:2vw;
 
 .dropbutton:click{
     color:white !important;
-    background-color:#ff479C!important;
+    background-color:#000a7e!important;
     border-style:none !important;
     background-image:none !important;
 }
 
 .dropbutton:hover{
     color:white !important;
-    background-color:#ff479C!important;
+    background-color:#000a7e!important;
     border-style:none !important;
     background-image:none !important;
 }
@@ -1852,7 +1860,7 @@ height:2vw;
 
 .tagger1{
     width:30vw;
-    border-color:#ff479C !important;
+    border-color:#000a7e !important;
 }
 
 .tagger2{
@@ -2041,7 +2049,7 @@ height:2vw;
     height:5vw;
     width:8vw;
     margin-right:0;
-    background-color:#ff479c;
+    background-color:#ff479b;
     color:white;
 }
 
