--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,27 +50,27 @@ color twitter 04b8ff
     background-color:#FFBE00;
 }
 .btndone{
-    background-color:#000a7e !important;
-    border-color:#000a7e !important;
+    background-color:#ff479c !important;
+    border-color:#ff479c !important;
     color:white;
 }
 
 .btndone:hover{
-    background-color:#000a7e !important;
-    border-color:#000a7e !important;
+    background-color:#ff479c !important;
+    border-color:#ff479c !important;
     color:white !important;
 }
 
 .btnradone{
-    background-color:#000a7e !important;
+    background-color:#ff479c !important;
     color:white !important;
-        border-color:#000a7e !important;
+        border-color:#ff479c !important;
 }
 
 .btnradone:active{
     background-color:white !important;
-    color:#000a7e !important;
-        border-color:#000a7e !important;
+    color:#ff479c !important;
+        border-color:#ff479c !important;
 }
 
 
@@ -81,7 +81,7 @@ color twitter 04b8ff
 .label2 {
     font-size:3.5vw !important;
     margin-left:2vw;
-    background-color: #000a7e!important;
+    background-color: #ff479c!important;
 }
 
 
@@ -90,7 +90,7 @@ color twitter 04b8ff
     margin-top:0.5vw;
     margin-bottom:2vw;
     font-size:3vw;
-    color:#000a7e;
+    color:#ff479c;
 }
 
 .popcount3{
@@ -104,7 +104,7 @@ color twitter 04b8ff
     margin-left:1vw;
     margin-top:1vw;
     font-size:3vw;
-    color:#000a7e;
+    color:#ff479c;
 }
 
 
@@ -112,8 +112,8 @@ color twitter 04b8ff
     font-size:3.5vw !important;
     margin-left:2vw;
     background-color:white!important;
-    color:#000a7e !important;
-    border-color:#000a7e !important;
+    color:#ff479c !important;
+    border-color:#ff479c !important;
     border-style:solid;
     border-width:1px;
 }
@@ -129,12 +129,12 @@ color twitter 04b8ff
     margin-top:1vw !important;
     font-size:100% !important;
     background-color:white!important;
-    color:#000a7e !important;
+    color:#ff479c !important;
 }
 
 
 .reviewwriting{
-    color:#000a7e;
+    color:#ff479c;
     margin-bottom:0px;
 }
 
@@ -148,7 +148,7 @@ color twitter 04b8ff
     margin-top:1.8vw !important;
     font-size:100% !important;
     background-color:white!important;
-    color:#000a7e !important;
+    color:#ff479c !important;
 }
 
  .takespans{
@@ -178,14 +178,14 @@ color twitter 04b8ff
     padding-top:2.5vw;
     height:10vw;
     background-color:#ffffff;
-    color:#000a7e;
+    color:#ff479c;
 }
 #myRevTitle:active {
     text-decoration: none !important;
     padding-top:2.5vw;
     height:10vw;
     background-color:#ffffff;
-    color:#000a7e;
+    color:#ff479c;
 }
 
 #myRevTitle:hover {
@@ -194,7 +194,7 @@ color twitter 04b8ff
     padding-top:2.5vw;
     height:10vw;
     background-color:#ffffff;
-    color:#000a7e;
+    color:#ff479c;
 }
 
 .label-tag-big {
@@ -236,13 +236,13 @@ color twitter 04b8ff
     background-color:#00B9FF!important;
 }
 .label-g1{
-    background-color: #000a7e!important;
+    background-color: #ff479c!important;
     color:white !important;
 }
 
 .label-11{
     background-color:white!important;
-    color:#000a7e!important;;
+    color:#ff479c!important;;
 }
 .label-12
 {
@@ -265,7 +265,7 @@ color twitter 04b8ff
 .btn2.active, .btn2:active {
     background-image: none;
     outline: 0;
-   background-color: #000a7e!important;
+   background-color: #ff479c!important;
    color:white!important;
 
 }
@@ -298,10 +298,10 @@ color:white!important;
 
 
 .label-default{
-    background-color:#000a7e;
+    background-color:#ff479c;
 }
 .label-danger{
-    background-color:#000a7e;
+    background-color:#ff479c;
 }
 .rating-loading {
     width: 45vw;
@@ -321,7 +321,7 @@ color:white!important;
 }
 #selectform2{
     height:81vh;
-    background-color:#000a7e;
+    background-color:#ff479c;
     font-family: "Jeju Gothic", sans-serif !important;
 }
 .rating-fa {
@@ -574,13 +574,13 @@ color:white!important;
     margin:0px !important;
     border-style:none !important;
     border-bottom-style:solid !important;
-    border-color:#000a7e;
+    border-color:#ff479c;
 
     border-bottom-width:1px !important;
     
 }
 #cla-panel:active{
-    background-color:#000a7e !important;
+    background-color:#ff479c !important;
 }
 
 #cla-panel:active .text-title{
@@ -608,12 +608,12 @@ color:white!important;
 
 #cla-panel:active .label2{
     background-color:white !important;
-    color:#000a7e;
+    color:#ff479c;
 }
 
 #cla-panel:active .label3{
     background-color:white !important;
-    color:#000a7e;
+    color:#ff479c;
 }
 
 
@@ -634,7 +634,7 @@ color:white!important;
     bottom:0;
     width:100vw;
     height:0.0vw;
-    background-color:#000a7e;
+    background-color:#ff479c;
 }
 
 .cbp-spmenu-top{
@@ -775,12 +775,12 @@ body {
 
     }
     #button1:active {
-    background-color:#000a7e !important;
+    background-color:#ff479c !important;
     border-style:none!important;
     color:white;
     }
         #button1:hover {
-    background-color:#000a7e !important;
+    background-color:#ff479c !important;
     border-style:none!important;
     color:white;
     }
@@ -1128,7 +1128,7 @@ a{
     font-size:5vw;
 }
 .glyphicon{
-    color:#000a7e;
+    color:#ff479c;
     font-size:5vw;
 }
 #com-panel2{
@@ -1152,7 +1152,7 @@ a{
     background-color: rgba(255, 255, 255, 1)!important;
     /* border-color: #ccc; */
     border-style:solid;
-    border-color:#000a7e;
+    border-color:#ff479c;
     border-width:0px 0px 1px 0px;
     margin: 0vw 0vw 0vw 0vw !important;
     padding:1.8vw 1.8vw 1.8vw 1.8vw;
@@ -1352,7 +1352,7 @@ height:2vw;
     width:96vw !important;
     text-decoration:none!important;
     font-size:5vw !important;
-    color:#000a7e !important;
+    color:#ff479c !important;
     height:15vw;
     border-left:0 !important;
 }
@@ -1361,14 +1361,14 @@ height:2vw;
     width:96vw !important;
     text-decoration:none !important;
     font-size:5vw !important;
-    background-color:#000a7e !important;
+    background-color:#ff479c !important;
     color:white !important;
 }
 .rmenu:active{
     width:96vw !important;
     text-decoration:none !important;
     font-size:5vw !important;
-    background-color:#000a7e !important;
+    background-color:#ff479c !important;
     color:white !important;
 }
 
@@ -1474,7 +1474,7 @@ height:2vw;
     border-style:solid;
     border-width:1px 0px 1px 0px;
     border-radius:0px;
-    border-color:#000a7e;
+    border-color:#ff479c;
     padding:2.2vw !important;
 }
 
@@ -1484,7 +1484,7 @@ height:2vw;
     border-style:solid;
     border-width:1px 0px 1px 0px;
     border-radius:0px;
-    border-color:#000a7e;
+    border-color:#ff479c;
     padding:2.2vw !important;
 }
 
@@ -1494,11 +1494,11 @@ height:2vw;
     border-style:solid;
     border-width:1px 0px 1px 0px;
     border-radius:0px;
-    border-color:#000a7e;
+    border-color:#ff479c;
 }
 
 #button_review1:active{
-   background-color:#000a7e;
+   background-color:#ff479c;
 }
 
 #button_review1:active .glyphicon-pencil{
@@ -1506,7 +1506,7 @@ height:2vw;
 }
 
 #button_review:active{
-   background-color:#000a7e;
+   background-color:#ff479c;
 }
 
 #button_review:active .glyphicon-pencil{
@@ -1514,7 +1514,7 @@ height:2vw;
 }
 
 #button_rating:active{
-   background-color:#000a7e;
+   background-color:#ff479c;
 }
 
 #button_rating:active .glyphicon-star{
@@ -1526,7 +1526,7 @@ height:2vw;
 }
 
 #button_rating2:active .label6{
-    background-color:#000a7e!important;
+    background-color:#ff479c!important;
     color:white !important;
 }
 #button_review1{
@@ -1535,7 +1535,7 @@ height:2vw;
     border-style:solid;
     border-width:1px 0px 1px 0px;
     border-radius:0px;
-    border-color:#000a7e;
+    border-color:#ff479c;
 }
 
 .modal-content{
@@ -1558,9 +1558,9 @@ height:2vw;
     margin-bottom:0!important;
     border-bottom:0;
     height:32.4vw;
-    background-color: #000a7e;
-  /*  background-color:transparent;
-    background-image: url("/assets/bg_redblur_navbar.jpg") !important; */
+    /*background-color: #ff479c;*/
+  background-color:transparent;
+    background-image: url("/assets/bg_redblur_navbar.jpg") !important; 
     background-size:100% 100%;
     z-index:0;
 
@@ -1641,7 +1641,7 @@ height:2vw;
 }
 
 #homeButton:hover #home_icon{
-     color:#000a7e;
+     color:#ff479c;
 }
 
 #homeButton:hover{
@@ -1657,7 +1657,7 @@ height:2vw;
     
 }
 .textbutton{
-    color:#000a7e !important;
+    color:#ff479c !important;
     background-color:transparent !important;
     border-style:none !important;
     
@@ -1687,7 +1687,7 @@ height:2vw;
 }
 
 #menuButton:hover #menu_icon{
-    color:#000a7e;
+    color:#ff479c;
 }
 
 #menu_icon{
@@ -1712,19 +1712,19 @@ height:2vw;
     height:14.4vw;
     border-style:none;
     background-color:white;
-    color:#000a7e;
-    border-color:#000a7e;
+    color:#ff479c;
+    border-color:#ff479c;
     font-weight:500;
 }
 
 #selectyourdep:active{
-    background-color:#000a7e;
+    background-color:#ff479c;
     color:white;
     border-color:white;
 }
 
 #selectyourdep2:active{
-    background-color:#000a7e;
+    background-color:#ff479c;
     color:white;
     border-color:white;
 }
@@ -1734,13 +1734,13 @@ height:2vw;
     height:14.4vw;
     border-style:none;
     background-color:white;
-    color:#000a7e;
-    border-color:#000a7e;
+    color:#ff479c;
+    border-color:#ff479c;
     font-size:5.4vw;
     font-weight:500;
 }
 #comment_icon{
-    color:#000a7e ;
+    color:#ff479c ;
     font-weight:500;
 }
 
@@ -1757,12 +1757,12 @@ height:2vw;
 }
 
 .dropbutton2{
-    width:96vw;
+    width:90vw;
     height:14.4vw;
     font-size:5.4vw;
     padding:1.8vw;
-    color:#000a7e;
-    border-color:#000a7e;
+    color:#ff479c;
+    border-color:#ff479c;
     background-image:none !important;
 }
 .dropbutton{
@@ -1772,7 +1772,7 @@ height:2vw;
     border-style:none;
     font-size:5.4vw;
     padding:1.8vw;
-    color:#000a7e!important;
+    color:#ff479c!important;
     background-image:none !important;
 }
 
@@ -1783,14 +1783,14 @@ height:2vw;
 }
 .dropbutton:active {
     color:white !important;
-    background-color:#000a7e!important;
+    background-color:#ff479c!important;
     border-style:none !important;
     background-image:none !important;
 }
 
 .dropbutton2:hover {
     color:white !important;
-    background-color:#000a7e!important;
+    background-color:#ff479c!important;
     border-style:none !important;
     background-image:none !important;
 }
@@ -1798,14 +1798,14 @@ height:2vw;
 
 .dropbutton:click{
     color:white !important;
-    background-color:#000a7e!important;
+    background-color:#ff479c!important;
     border-style:none !important;
     background-image:none !important;
 }
 
 .dropbutton:hover{
     color:white !important;
-    background-color:#000a7e!important;
+    background-color:#ff479c!important;
     border-style:none !important;
     background-image:none !important;
 }
@@ -1859,17 +1859,17 @@ height:2vw;
 }
 
 .tagger1{
-    width:30vw;
-    border-color:#000a7e !important;
+    width:27vw;
+    border-color:#ff479c !important;
 }
 
 .tagger2{
-    width:30vw;
+    width:27vw;
     border-color:#00B9FF !important;
 }
 
 .tagger3{
-    width:30vw;
+    width:27vw;
     border-color:#FFBE00  !important;
 }
 
