--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
   <div class="page " align="center">
      <meta content='width=device-width, height=device-height,initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <!--네비게이션 바-->
-  <!--인덱스에선 빠져야함-->
+  <!--인덱스에선 빠져야함ㅇㅇ -->
   <% if user_signed_in? %>
   <nav class="navbar navbar-default navbar-static-top" align="center">
     <div class="row" id="rowspecial" align="center">
