--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -657,6 +657,7 @@ color:white!important;
 body {
     width:100vw;
     height:180vw;
+     font-family: "Jeju Gothic", sans-serif !important;
     }
     
 
