modified lots of problems

--- a/app/views/hoegi105/classreview.erb
+++ b/app/views/hoegi105/classreview.erb
@@ -18,7 +18,7 @@ $(document).ready(function(){
 </script>-->
 
 
-<div class="page-ex" align="center">
+<div class="page-ex" align="center"></div>
                 
     <div id="panel-ex" class="panel panel-default">
         <!--현재접속계정 : <%= current_user.email %><br>-->
