--- a/app/views/hoegi105/myreview.erb
+++ b/app/views/hoegi105/myreview.erb
@@ -64,9 +64,9 @@
                   <% if revw.eval_grade == 3 %> 
                     <span class="label-tag label-danger">학점느님</span>
                   <% elsif revw.eval_grade == 2 %> 
-                    <span class="label-tag label-danger">B0마왕</span>
+                    <span class="label-tag label-danger">상대평가</span>
                   <% else %> 
-                    <span class="label-tag label-danger">F폭격기</span>
+                    <span class="label-tag label-danger">C뿌리기</span>
                   <% end %>
                 </span> &nbsp;
                 <span class="label-tag label-g2">
