edit mailer in password

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,7 +1,8 @@
 <p>안녕하세요 <%= @resource.email %>님! 경희대 강의평가 서비스 Khulgang입니다. </p>
 
-<p>최근 비밀번호 변경 시도가 있었습니다. 본인이 맞으시면 아래 링크를 클릭해주세요.</p>
-<p><%= link_to '비밀번호 변경하기', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>최근 비밀번호 변경 시도가 있었습니다. 본인이 맞으시면 아래 링크를 클릭해주세요.</p><br><br>
+
+<p><strong><%= link_to '[링크]비밀번호 변경하기', edit_password_url(@resource, reset_password_token: @token) %></strong></p><br><br>
 
 
 <p>만약 변경 시도를 한 적이 없거나, 변경하고 싶지 않으시면 이 메일을 무시하셔도 됩니다.</p>
