--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
             <h4 class="reg-label">아이디</h4>
         </div>
         <div>
-          <%= f.email_field :email, autofocus: true, id: "reg-form-id", class: "form-control", placeholder: "이메일" %>
+          <%= f.email_field :email, autofocus: true, id: "reg-form-id", class: "form-control", placeholder: "이메일 주소" %>
         </div>
         
         <div class="reg-row1">
