--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <!--<script src="/app/assets/starrating/js/star-rating.min.js" type="text/javascript"></script>-->
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="aNffKgFKf_OSWEJGWVDtYi2k3EllYHdnTHnQlcrUZLk" />
+    <meta name="naver-site-verification" content="2e475e9303d896f23f44a9cfd47104a588c5c57d"/>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     
