--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.khulgang.xyz" />
     <meta property="og:image" content="/assets/bg_redblur.png" />
+    <meta property="fb:admins" content="hk8799@hanmail.net"/>
     <meta name="google-site-verification" content="aNffKgFKf_OSWEJGWVDtYi2k3EllYHdnTHnQlcrUZLk" />
     <meta name="naver-site-verification" content="2e475e9303d896f23f44a9cfd47104a588c5c57d"/>
     <meta name="description" content="경희인들의 솔직한 강의평가 익명 서비스">
