update modify, pokedex

--- a/app/views/hoegi105/admin.erb
+++ b/app/views/hoegi105/admin.erb
@@ -29,7 +29,7 @@
             <input type="checkbox" name="lecturemajor[]" value="006">호텔경영학과<br>
     </div>
     <div class= "admin-row">
-         <button>등록</button>
+         <input type="submit" value="등록"></input>
     </div>
 </div>
 </form>
