--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1206,6 +1206,14 @@ a{
     height:16vw;
 }
 
+#for-profile-image2{
+    padding-left:1vw;
+    padding-right:1vw;
+    padding-top:2vw;
+    width:30vw;
+    height:32vw;
+}
+
 #searching2{
     width:0;
     height:0;
@@ -1220,6 +1228,15 @@ a{
     border-style:none;
     border-radius:0.5em;
     /*background-image: url("/assets/bird.jpg");*/
+    background-size:10vw 10vw;
+    
+}
+.profile-image2{
+    
+    width:25vw;
+    height:25vw;
+    border-style:none;
+    border-radius:0.5em;
     background-size:10vw 10vw;
     
 }
@@ -1277,6 +1294,16 @@ font-size:4.5vw;
 }
 
 #com-close3{
+    width:auto;
+    font-size:4.5vw;
+}
+
+#com-close4{
+    width:auto;
+    font-size:4.5vw;
+}
+
+#com-close5{
     width:auto;
     font-size:4.5vw;
 }
@@ -1449,6 +1476,21 @@ height:2vw;
     z-index:999;
     box-shadow: 0px -5px 5px rgba(0,0,0,0.5);
 }
+
+#itsyou5{
+    font-family: "Jeju Gothic", sans-serif !important;
+    width:96vw;
+    margin-left:2vw;
+    position:fixed;
+    bottom:0;
+    height:0;
+    border-top-right-radius:1.5em;
+    border-top-left-radius:1.5em;
+    background-color:white;
+    z-index:999;
+    box-shadow: 0px -5px 5px rgba(0,0,0,0.5);
+}
+
 .pagehead{
     width:80vw;
 }
@@ -1504,6 +1546,7 @@ height:2vw;
     border-width:1px 0px 1px 0px;
     border-radius:0px;
     border-color:#ff479c;
+    padding:2.2vw !important;
     
 }
 
