--- a/app/views/hoegi105/pokedex.erb
+++ b/app/views/hoegi105/pokedex.erb
@@ -1,9 +1,9 @@
-<p>포켓몬은 평가를 작성한 경우에만 수집됩니다.</p>
+<h4 class="text-professor" align="center">포켓몬은 평가를 작성한 경우에만 수집됩니다.</h4>
 <% @pokelist.each do |dex| %>
   <div style="margin:5%">
     <div id="for-profile-image2" class="col-xs-4" align="center">
       <div class="profile-image2"><img class="profile-image2" src="/assets/pokemon/<%= dex.picture %>.png"></div>
-      <h4 class="text-professor" aling="center">
+      <h4 class="text-professor" align="center">
       <%= dex.picture %>
       </h4>
     </div>
